--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,17 +1,44 @@
-/* html {
+/* General CSS */
+
+html {
     width: 100%;
-} */
+}
+
+body {
+    background-color: rgb(255, 255, 255);
+}
+
+/* Portofolio */
+
+.portfolio-header {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
 
 .navlink {
     color: black;
     text-decoration: none;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
-.petslink {
+.proyectslist {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 40px;
+}
+
+
+/* ---------------------------------------------------------------------------------------------------------- */
+
+
+
+/* Pets gallery */
+
+. .portfoliolink {
     color: black;
     text-decoration: none;
-}
-
-body {
-    background-color: aquamarine;
 }
