--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -2,13 +2,32 @@
 
 html {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    font-family: 'Times New Roman', Times, serif;
+}
+
+a {
+    text-decoration: none;
+    color: purple;
+    font-size: 1rem;
+}
+
+a:hover {
+    color: violet;
 }
 
 body {
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(211, 97, 217);
 }
 
 /* Portofolio */
+
+.portfolio-body {
+    width: 90%;
+}
 
 .portfolio-header {
     width: 100%;
@@ -19,8 +38,6 @@ body {
 }
 
 .navlink {
-    color: black;
-    text-decoration: none;
     padding-left: 15px;
     padding-right: 15px;
 }
@@ -38,7 +55,98 @@ body {
 
 /* Pets gallery */
 
-. .portfoliolink {
-    color: black;
-    text-decoration: none;
+.pets-body {
+    width: 100%;
+}
+
+.pets-header {
+    display: flex;
+    justify-content: center;
+    font-size: 100%;
+    margin-bottom: 2%;
+}
+
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    justify-items: center;
+    gap: -100px;
+
+}
+
+.img-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 150%;
+}
+
+.puffle-des {
+    width: 70%;
+    margin-top: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 100%;
+    font-weight: 100;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+}
+
+.img-container {
+    width: 200px;
+    border: 3px solid black;
+    border-radius: 20px;
+
+    background-image: none;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+#img1 {
+    background-image: url(/portfolio/pets/yellowback.png);
+}
+
+#img2 {
+    background-image: url(/portfolio/pets/blueback.png);
+}
+
+#img3 {
+    background-image: url(/portfolio/pets/dragonback.png);
+}
+
+#img4 {
+    background-image: url(/portfolio/pets/brownback.png);
+}
+
+#img5 {
+    background-image: url(/portfolio/pets/redback.png);
+}
+
+#img6 {
+    background-image: url(/portfolio/pets/greenback.png);
+}
+
+.img-container :hover {
+    box-shadow: 10px 10px 10px 10px black;
+}
+
+.img-container :active {
+    box-shadow: 10px 10px 10px 10px black;
+}
+
+.backlink-container {
+    display: grid;
+    grid-template-rows: 1fr;
+    justify-content: center;
+}
+
+.portfoliolink {
+    font-size: 250%;
+    margin-top: 20%;
 }
