--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -2,10 +2,6 @@
 
 html {
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
     font-family: 'Times New Roman', Times, serif;
 }
 
@@ -15,13 +11,27 @@ a {
     font-size: 1rem;
 }
 
+h2 {
+    font-size: 1.5rem;
+}
+
+h1 {
+    font-size: 2rem;
+}
+
 a:hover {
     color: violet;
 }
 
 body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: rgb(211, 97, 217);
 }
+
+/* ---------------------------------------------------------------------------------------------------------- */
+
 
 /* Portofolio */
 
@@ -37,15 +47,34 @@ body {
     justify-content: space-around;
 }
 
-.navlink {
-    padding-left: 15px;
-    padding-right: 15px;
+.portfolionav {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
 }
 
-.proyectslist {
+.projectslist {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 40px;
+}
+
+#text-btn {
+    letter-spacing: 1px;
+    background-color: pink;
+    color: purple;
+    font-weight: 900;
+
+    font-size: 1rem;
+    cursor: pointer;
+
+    width: auto;
+    border-radius: 4px;
+
+}
+
+#text-btn:hover {
+    text-shadow: 2px 2px rgb(141, 135, 141);
 }
 
 
@@ -71,7 +100,6 @@ body {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
     justify-items: center;
-    gap: -100px;
 
 }
 
@@ -93,8 +121,11 @@ body {
 }
 
 img {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    height: auto;
+    display: block;
+    border-radius: 20px;
+    cursor: pointer;
 }
 
 .img-container {
@@ -132,12 +163,8 @@ img {
     background-image: url(/portfolio/pets/greenback.png);
 }
 
-.img-container :hover {
-    box-shadow: 10px 10px 10px 10px black;
-}
-
-.img-container :active {
-    box-shadow: 10px 10px 10px 10px black;
+.img-container:hover {
+    box-shadow: 10px 10px 10px 10px rgb(59, 3, 61);
 }
 
 .backlink-container {
@@ -149,4 +176,44 @@ img {
 .portfoliolink {
     font-size: 250%;
     margin-top: 20%;
+}
+
+
+/* ---------------------------------------------------------------------------------------------------------- */
+
+
+/* Mobile Responsive */
+
+@media (max-width: 600px) {
+
+    /* Navigation */
+    .portfolionav {
+        flex-direction: column;
+        align-items: center;
+        gap: 0.5rem;
+    }
+
+    /* Projects */
+    .projectslist {
+        grid-template-columns: 1fr;
+    }
+
+    /* Pets gallery */
+    .gallery {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+/* Tablets Resposnive */
+@media (min-width: 601px) and (max-width: 900px) {
+
+    /* Projects */
+    .projectslist {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    /* Pets gallery */
+    .gallery {
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
