--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -166,6 +166,7 @@ img {
 
 .img-container:hover {
     box-shadow: 10px 10px 10px 10px rgb(59, 3, 61);
+    transform: translateY(-10px);
 }
 
 .backlink-container {
